// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Link Default renders correctly 1`] = `
<a
  class="ecl-link ecl-link--default"
  href="/path"
>
  Default link
</a>
`;

exports[`EC - Link Standalone renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone"
  href="/path"
>
  Standalone link
</a>
`;

exports[`EC - Link Standalone with missing icon name renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone"
  href="/path"
>
  Standalone link with icon
</a>
`;

exports[`EC - Link With icon after renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
  href="/path"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
   
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
</a>
`;

exports[`EC - Link With icon after renders correctly with extra attributes 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  href="/path"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
   
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
</a>
`;

exports[`EC - Link With icon after renders correctly with extra class names 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after custom-link custom-link--test"
  href="/path"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
   
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
</a>
`;

exports[`EC - Link With icon before renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before"
  href="/path"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
   
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
</a>
`;

exports[`EC - Link With missing icon name renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
  href="/path"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
   
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
</a>
`;

exports[`EC - Link With two icons after renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
  href="/path"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
   
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--download"
    />
  </svg>
</a>
`;

exports[`EC - Link With two icons after renders correctly with extra class names 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after custom-link custom-link--test"
  href="/path"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
   
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--download"
    />
  </svg>
</a>
`;

exports[`EC - Link With two icons before renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before"
  href="/path"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--download"
    />
  </svg>
   
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
</a>
`;

exports[`EC - Link With two icons before renders correctly with extra class names 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before custom-link custom-link--test"
  href="/path"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--download"
    />
  </svg>
   
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
</a>
`;
